# Euclid

./: .gitignore  .gitmodules  CMakeLists.txt  Euclid  Hohmann  LICENSE  README.md
headers/: controller.hpp  renderer.hpp  scene.hpp  shaders.hpp  textures.hpp  window.hpp
include/glad/: glad.h
shaders/: fragment.glsl  vert.shader  vertex.glsl
src/: controller.cpp  glad.c  main.cpp  renderer.cpp  shader_loader.cpp  shaders.cpp  shaders.hpp  textures.cpp  window.cpp
